# spoor

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  requirements-dev.txt
bzlmod/: apple_llvm_and_swift.bzl  llvm_deps.bzl  perfetto.bzl  perfetto_deps.bzl
spoor/: BUILD  integration_test.sh
spoor/common/config/: BUILD  util.h
spoor/instrumentation/: BUILD  register_pass_test.sh  spoor_opt.cc
spoor/instrumentation/config/: BUILD
spoor/instrumentation/filters/: BUILD
spoor/instrumentation/inject_instrumentation/: BUILD  inject_instrumentation.cc
spoor/instrumentation/symbols/: BUILD
spoor/instrumentation/test_data/: fib_instrumented.ll  fib_instrumented_initialized.ll  fib_instrumented_initialized_enabled.ll  fib_only_main_instrumented.ll
spoor/instrumentation/wrappers/apple/: BUILD
spoor/runtime/: BUILD  runtime.h  runtime_common.cc
spoor/runtime/buffer/: BUILD  circular_buffer_test.cc
spoor/runtime/config/: BUILD
spoor/runtime/event_logger/: BUILD
spoor/runtime/flush_queue/: BUILD
spoor/runtime/runtime_manager/: BUILD  runtime_manager_benchmark.cc
spoor/runtime/trace/: BUILD
spoor/runtime/wrappers/apple/: BUILD
spoor/toolchains/xcode/: BUILD  clang_clangxx_shared.py  instrument_ios_app_test.sh  swift.py  swiftc.py
spoor/toolchains/xcode/test_data/minimal_swift_ios_app/MinimalSwiftApp.xcodeproj/: project.pbxproj
spoor/tools/: BUILD
spoor/tools/adapters/perfetto/: BUILD  perfetto_adapter.cc
spoor/tools/config/: BUILD
spoor/tools/serialization/: BUILD
spoor/tools/serialization/csv/: BUILD
spoor/tools/wrappers/apple/: BUILD
toolchain/: city_hash.BUILD  gsl.BUILD  llvm-raw.patch  snappy.BUILD  swift.BUILD  tomlplusplus.BUILD
toolchain/compilation_database/: BUILD  compilation_database_util.cc  compilation_database_util.h  compilation_database_util_test.cc  extract_compile_command.cc
toolchain/perfetto_overrides/: perfetto_cfg.bzl
toolchain/style/: BUILD  style.bzl
util/: BUILD
util/compression/: BUILD  snappy_compressor.cc
util/env/: BUILD
util/file_system/: BUILD
util/flags/: BUILD
util/flat_map/: BUILD
util/memory/: BUILD
util/time/: BUILD
